--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "json-server db.json -m ./node_modules/json-server-auth"
+    "dev": "json-server db.json -m ./node_modules/json-server-auth",
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
